2002-07-18  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3mimgdisplay.c (main): '5' for w3mimgsize

2002-07-18  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 03270] Re: w3m-img for framebuffer merged
	* w3mimg/x11/x11_w3mimg.c (w3mimg_x11open): unsigned int nchildren

2002-07-18  Fumitoshi UKAI  <ukai@debian.or.jp>

	* XMakefile (w3mimg/w3mimg): added
		(w3img/fb) fixed
	* w3mimg/w3mimg.h (w3mimg_open): deleted to avoid compilation warnings
	* w3mimg/w3mimg.c: added
	* configure (imgobjs): add w3mimg/w3mimg.o 

2002-07-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03272] Re: w3m-img for framebuffer merged (Re:  Re: w3m-img for framebuffer)
	* XMakefile (w3mimg/x11): chdir
		(w3mimg/fb): chdir

2002-07-18  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03273] Re: w3m-img for framebuffer merged
	* configure (use_w3mimg_fb): check linux, use test -c

2002-07-18  Fumitoshi UKAI  <ukai@debian.or.jp>

	* merge w3m-img for framebuffer support
	* w3mimg/w3mimg.h: created
	* w3mimg/x11/x11_w3mimg.c: created
	* w3mimg/fb/fb_w3mimg.c: created
	* w3mimgsize.c w3mimgdisplay.c: modified
	* configure: modified
	* XMakefile: modified
	* config.h.dist: updated

2002-07-18  ZXB01226@nifty.com

	* w3m-img for framebuffer support
	* http://homepage3.nifty.com/slokar/fb/
	* w3mimg/fb/fb.c w3mimg/fb/fb.h 
	  w3mimg/fb/fb_img.c w3mimg/fb/fb_img.h
	  w3mimg/fb/fb_gdkpixbuf.c w3mimg/fb/fb_gdkpixbuf.h
	  w3mimg/fb/fb_imlib2.c w3mimg/fb/fb_imlib.h
	  w3mimg/fb/readme.txt w3mimg/fb/license.txt: added

2002-07-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03263] fix lastA segfault
	* main.c (lastA): fix lastA segfault when no anchor found

2002-07-18  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: cvs version

2002-07-16  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.3.1
	* version.c.in: update
	* doc/README: version 0.3, release date
	* doc-jp/README: ditto
	* NEWS: update

2002-07-12  WATANABE Katsuyuki <katsuyuki_1.watanabe@toppan.co.jp>
