@@ -1,3 +1,9 @@
+2002-07-18  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03275] fix of multipart.cgi
+	* scripts/multipart/multipart.cgi.in: check REQUEST_METHOD first
+					need $count for POST
+
 2002-07-18  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* w3mimgdisplay.c (main): '5' for w3mimgsize
